--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "mapbox-gl": "^2.10.0",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -21,6 +22,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "prisma": "^4.4.0",
     "typescript": "4.8.4"
   }
 }
