--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "@types/mapbox-gl": "^2.7.6",
     "mapbox-gl": "^2.10.0",
     "next": "12.3.1",
     "react": "18.2.0",
