--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.9",
     "@prisma/client": "^4.4.0",
+    "@turf/turf": "^6.5.0",
+    "@turf/voronoi": "^6.5.0",
     "@types/mapbox-gl": "^2.7.6",
     "mapbox-gl": "^2.10.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-map-gl": "^7.0.19"
+    "react-map-gl": "^7.0.19",
+    "recharts": "^2.4.3"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
