--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.19",
-    "recharts": "^2.4.3"
+    "recharts": "^2.4.3",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
