--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@turf/voronoi": "^6.5.0",
     "@types/mapbox-gl": "^2.7.6",
     "mapbox-gl": "^2.10.0",
+    "mapbox-gl-rain-layer": "^0.5.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
