--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mapbox-gl-rain-layer": "^0.5.0",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.19",
     "recharts": "^2.4.3",
