--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@turf/turf": "^6.5.0",
     "@turf/voronoi": "^6.5.0",
     "@types/mapbox-gl": "^2.7.6",
+    "chart.js": "^4.2.1",
     "mapbox-gl": "^2.10.0",
     "mapbox-gl-rain-layer": "^0.5.0",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.19",
