--- a/package.json
+++ b/package.json
@@ -31,18 +31,22 @@
     "swr": "^2.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.14",
     "cypress": "^12.9.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "postcss": "^8.4.21",
     "prisma": "^4.4.0",
     "semistandard-prettier-eslint": "^1.0.2",
+    "tailwindcss": "^3.3.1",
     "typescript": "4.8.4"
   }
 }
