--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "plugins": ["jest"],
-  "env": {
-    "jest/globals": true
-  }
+  "extends": "next/core-web-vitals"
 }
