--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@turf/turf": "^6.5.0",
     "@turf/voronoi": "^6.5.0",
     "@types/mapbox-gl": "^2.7.6",
+    "@vercel/analytics": "^1.0.0",
     "chart.js": "^4.2.1",
     "mapbox-gl": "^2.10.0",
     "next": "12.3.1",
